2004-10-18  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	- Minor changes

	* data/default.css:
	- Some CSS changes

	* data/Makefile.am:
	* data/ui/yelp-ui.xml:
	* data/ui/yelp.glade:
	* src/Makefile.am:
	* src/yelp-base.c:
	* src/yelp-gecko-utils.cpp:
	* src/yelp-gecko-utils.h:
	* src/yelp-html-gecko.c:
	* src/yelp-html.h:
	* src/yelp-window.c:
	- Added font preference and all the Gecko wonder that goes with
	- Moved theme stuff to settings

	* src/yelp-man-pager.c:
	* src/yelp-toc-pager.c:
	* src/yelp-window.c:
	- Moved theme stuff to settings

	* src/yelp-db-pager.c:
	* src/yelp-pager.c:
	* src/yelp-utils.c:
	- Changed debug statements to use g_print

2004-10-12  Shaun McCance  <shaunm@gnome.org>

	* data/ui/yelp-ui.xml:
	* src/yelp-window.c:
	- Added Copy, breaking Copy
	- DND from the tree view

	* src/Makefile.am:
	* src/yelp-cache.h:
	- Removed yelp-uri

	* src/test-uri.c:
	* src/yelp-base.c:
	* src/yelp-pager.c:
	* src/yelp-utils.c:
	* src/yelp-utils.h:
	* src/yelp-window.c:
	- Privatized YelpDocInfo
	- Added multiple URI support to YelpDocInfo

2004-10-10  Shaun McCance  <shaunm@gnome.org>

	* data/ui/yelp.glade:
	* src/yelp-window.c:
	- Open Location dialog

2004-10-10  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/yelp-history.c:
	* src/yelp-history.h:
	* src/yelp-window.c:
	- Removed yelp-history, using a simple stack in yelp-window

2004-10-08  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Fixed compilation problem

2004-10-08  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-utils.c:
	- A NULL check, and re-enabling the pager unreffing

	* src/yelp-window.c:
	- Fix for bug #146935: Previous, Next, and Contents were sensitive when
	  they shouldn't have been

2004-10-07  Shaun McCance  <shaunm@gnome.org>

	* data/ui/Makefile.am:
	* data/ui/yelp-ui.xml:
	* src/yelp-window.c:
	- Use the new menu API

2004-10-07  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-utils.c: