@@ -1,5 +1,15 @@
 2004-10-18  Shaun McCance  <shaunm@gnome.org>
 
+	* src/Makefile.am:
+	* src/yelp-gecko-utils.cpp:
+	* src/yelp-gecko-utils.h:
+	* src/yelp-html-gecko.c:
+	* src/yelp-html.h:
+	* src/yelp-window.c:
+	- Patch from Don Scorgie to make Copy work.  Yay!
+
+2004-10-18  Shaun McCance  <shaunm@gnome.org>
+
 	* configure.in:
 	- Minor changes
 
